--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,16 @@ backoff==2.2.1
 blinker==1.8.2
 botocore==1.35.36
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
 frozenlist==1.4.1
+gevent==24.2.1
 gql==3.5.0
 graphql-core==3.2.4
+greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
@@ -23,13 +26,18 @@ Jinja2==3.1.4
 jmespath==1.0.1
 MarkupSafe==3.0.1
 multidict==6.1.0
+mysql-connector-python==9.0.0
 propcache==0.2.0
+pycparser==2.22
 python-dateutil==2.9.0.post0
 requests==2.32.3
 requests-toolbelt==1.0.0
 six==1.16.0
 sniffio==1.3.1
 urllib3==2.2.3
+websocket==0.2.1
 websockets==11.0.3
 Werkzeug==3.0.4
 yarl==1.14.0
+zope.event==5.0
+zope.interface==7.0.3
