--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
 idna==3.10
+influxdb-client==1.46.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jmespath==1.0.1
@@ -30,10 +31,12 @@ mysql-connector-python==9.0.0
 propcache==0.2.0
 pycparser==2.22
 python-dateutil==2.9.0.post0
+reactivex==4.0.4
 requests==2.32.3
 requests-toolbelt==1.0.0
 six==1.16.0
 sniffio==1.3.1
+typing_extensions==4.12.2
 urllib3==2.2.3
 websocket==0.2.1
 websockets==11.0.3
