--- a/compose.yml
+++ b/compose.yml
@@ -9,6 +9,7 @@ services:
   
   influx:
     image: influxdb:2
+    host: influx
     volumes:
       - ./influx/lib:/var/lib/influxdb2
       - ./influx/config:/etc/influxdb2
@@ -21,6 +22,7 @@ services:
 
   redis:
     image: redis:6
+    host: redis
     volumes:
       - ./redis/data:/data
     restart: always
