--- a/compose.yml
+++ b/compose.yml
@@ -4,8 +4,6 @@ services:
     restart: always
     ports:
       - 7300:3000
-    volumes:
-      - ./battles:/usr/app/db/battles
   
   influx:
     image: influxdb:2
@@ -20,10 +18,25 @@ services:
       - DOCKER_INFLUXDB_INIT_ORG=battlestats
       - DOCKER_INFLUXDB_INIT_BUCKET=league
 
-  redis:
+  users:
     image: redis:6
-    hostname: redis
+    hostname: users
     volumes:
-      - ./redis/data:/data
+      - ./redis/users/data:/data
+    restart: always
+    command: redis-server --save 60 1 --loglevel warning
+
+  battles:
+    image: redis:6
+    hostname: battles
+    volumes:
+      - ./redis/battles/data:/data
+    restart: always
+    command: redis-server --save 60 1 --loglevel warning
+  fleets:
+    image: redis:6
+    hostname: fleets
+    volumes:
+      - ./redis/fleets/data:/data
     restart: always
     command: redis-server --save 60 1 --loglevel warning
