--- a/compose.yml
+++ b/compose.yml
@@ -14,7 +14,7 @@ services:
     environment:
       DOCKER_INFLUXDB_INIT_MODE: setup
       DOCKER_INFLUXDB_INIT_USERNAME: admin
-      DOCKER_INFLUXDB_INIT_PASSWORD: admin
+      DOCKER_INFLUXDB_INIT_PASSWORD: adminadmin
       DOCKER_INFLUXDB_INIT_ORG: battlestats
       DOCKER_INFLUXDB_INIT_BUCKET: battlestats
     volumes:
