remove paths for the docker compose file

--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -1,10 +1,10 @@
 FROM python:3
 
 WORKDIR /usr/task_runner
-COPY ../requirements.txt .
-COPY ../modules .
-COPY ../task_runner.py .
-COPY ../config.json .
+COPY requirements.txt .
+COPY modules .
+COPY task_runner.py .
+COPY config.json .
 
 RUN pip3 install -r requirements.txt
 
