--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "port": 3000,
-    "postgress": {
+    "postgres": {
         "host": "postgres",
         "user": "postgres",
         "password": "postgres",
