--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "port": 3000,
     "postgres": {
-        "host": "postgres",
+        "host": "database",
         "user": "postgres",
         "password": "postgres",
         "port": 5432
