add discord channel reader

--- a/compose.yml
+++ b/compose.yml
@@ -32,3 +32,9 @@ services:
     hostname: systems
     restart: always
     command: redis-server
+
+  battleTabsLive:
+    build:
+      context: .
+      dockerfile: liveDockerfile
+    restart: always
