lowercase instead of camel caps

--- a/compose.yml
+++ b/compose.yml
@@ -33,7 +33,7 @@ services:
     restart: always
     command: redis-server
 
-  battleTabsLive:
+  battletabslive:
     build:
       context: .
       dockerfile: liveDockerfile
